# dooz

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  requirements.txt  skills-lock.json
.beads/: metadata.json
brain/: llm_client.py  tool_registry.py
client/: base.py  brain.py  brain_plugin.py  main.py
client/dooz_python_client/: pyproject.toml
client/dooz_python_client/src/dooz_python_client/: __init__.py
client/python/dooz_client/: pyproject.toml
client/python/dooz_client/src/dooz_client/: __init__.py
config/: computer.yaml  light.yaml  phone.yaml  speaker.yaml  tv.yaml
core/: actor_state.py  discovery.py  election.py  transport.py  types.py
dooz_cli/: .gitignore  Cargo.toml  pyproject.toml
dooz_cli/src/: action.rs  app.rs  main.rs  tui.rs
dooz_cli/src/dooz_cli/: __init__.py  __main__.py  cli.py  websocket_client.py
dooz_cli/src/dooz_cli/clarification/: __init__.py  agent.py  intent_detector.py  questions.py  state.py
dooz_cli/src/dooz_cli/tui/: __init__.py  app.py  models.py  websocket_tui.py
dooz_cli/src/dooz_cli/tui/screens/: __init__.py  chat_screen.py  main_screen.py
dooz_cli/src/dooz_cli/tui/widgets/: __init__.py  chat_bubble.py  conversation_list.py  input_area.py  message_list.py
dooz_cli/src/fragments/: fragment.rs  mod.rs
dooz_cli/src/fragments/chat/: mod.rs  model.rs  update.rs  view.rs
dooz_cli/src/session/: store.rs  types.rs
dooz_cli/src/ui/: components.rs  layout.rs
dooz_cli/tests/: test_clarification_agent.py  test_clarification_state.py  test_cli.py  test_intent_detector.py  test_questions.py  test_websocket_client.py
dooz_cli/tests/tui/: test_app.py  test_chat_bubble.py  test_chat_screen.py  test_input_area.py  test_message_list.py  test_models.py  test_websocket_tui.py
dooz_daemon/: pyproject.toml
dooz_daemon/definitions/agents/: light-agent.yaml  sensor-agent.yaml  speaker-agent.yaml
dooz_daemon/definitions/dooz/: dooz_1_1.yaml  dooz_2_1.yaml
dooz_daemon/src/dooz_daemon/: __init__.py  __main__.py  agent_manager.py  config.py  daemon.py  mqtt_client.py  websocket_server.py
dooz_daemon/src/dooz_daemon/agents/: __init__.py  base.py  monitor.py  orchestrator.py  scheduler.py
dooz_daemon/src/dooz_daemon/loader/: __init__.py  agent_loader.py  dooz_loader.py
dooz_daemon/src/dooz_daemon/schemas/: __init__.py  agent.py  dooz.py
dooz_daemon/tests/: test_agent_loader.py  test_agent_manager.py  test_agent_schema.py  test_config.py  test_daemon.py  test_dooz_loader.py  test_dooz_schema.py  test_monitor.py  test_mqtt_client.py  test_orchestrator.py  test_scheduler.py  test_websocket_server.py
dooz_server/: README.md  main.py  pyproject.toml
dooz_server/examples/agent/: config.json
dooz_server/examples/agent/prompts/: 00_system_role.txt  10_context_agents.txt  20_context_history.txt
dooz_server/src/dooz_server/: __init__.py  cli.py  client_manager.py  heartbeat.py  message_handler.py  message_queue.py  router.py  schemas.py
dooz_server/src/dooz_server/agent/: __init__.py  agent.py  config.py  conversation.py  llm_client.py  prompt_loader.py  task_router.py
dooz_server/src/dooz_server/system_agents/: __init__.py  dooz_agent.py  loader.py  task_scheduler.py
dooz_server/src/dooz_server/system_agents/prompts/: 00_system_role.md  10_context_agents.md  20_context_history.md  30_user_task.md
dooz_server/test_clients/: __init__.py  client_alice.py  client_base.py  client_bob.py  client_charlie.py  client_interactive.py  generate_config.py  profile_alice.json  profile_bob.json  profile_charlie.json  profile_user_alice.json  test_profile.json  user_client_interactive.py
dooz_server/tests/: test_client_manager.py  test_heartbeat.py  test_message_handler.py  test_message_queue.py  test_router.py  test_schemas.py
dooz_server/tests/agent/: test_agent.py  test_agent_integration.py  test_config.py  test_conversation.py  test_llm_client.py  test_prompt_loader.py  test_task_router.py
prompts/: 00_system_role.md  10_context_agents.md  20_context_history.md  30_user_task.md
scripts/: run_mvp.sh
server/: main.py
skills/: __init__.py  display_video.py  play_audio.py  screen_display.py  (+3 more)
(+60 files in other folders)
