[project]
name = "dooz"
version = "0.1.0"
description = "AI-Friendly Hardware Module & System"
requires-python = ">=3.10"
dependencies = [
    "fastdds>=2.14.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
