[project]
name = "dooz-cli"
version = "0.1.0"
description = "Dooz CLI - User interface for dooz agent system."
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dooz_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
