[project]
name = "dooz-daemon"
version = "0.1.0"
description = "Dooz Daemon - Agent management and message routing"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "paho-mqtt>=1.6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
dooz-daemon = "dooz_daemon.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/dooz_daemon"]
