[project]
name = "dooz-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "novio", email = "744351893@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dooz-server = "dooz_server:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
