[project]
name = "dooz-server"
version = "0.1.0"
description = "WebSocket message relay server"
readme = "README.md"
authors = [
    { name = "novio", email = "744351893@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pypubsub>=4.0.3",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "socksio>=1.0.0",
]

[project.scripts]
dooz-server = "dooz_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
