[project]
name = "dooz-python-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "novio", email = "744351893@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dooz-python-client = "dooz_python_client:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
